# advocate

./: .gcloudignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.ui  README.md  SPEC.md  cloudbuild.ui.yaml  demo_alumni_contacts.csv  demo_alumni_contacts_fintech.csv  demo_target_companies.csv  demo_target_companies_fintech.csv  pyproject.toml
.claude/: VENDORED.md  settings.json
.firecrawl/: rules.json
advocate/: app.py  cli.py
advocate/agents/: config.py  drafting.py  errors.py  orchestrator.py  pipeline_tools.py  prep_tools.py  scheduler_tools.py  session_state.py  sourcing.py  state_tools.py  tools.py
advocate/core/: active_five.py  business_days.py  cadence.py  citations.py  classification.py  drafting.py  email_eval.py  gate.py  guardrails.py  models.py  pipeline.py  ranker.py  research.py  sourcing.py  state.py  tiara.py
advocate/data/: firestore_repo.py  loaders.py  repository.py  repository_factory.py  serialization.py
advocate/eval/: __init__.py  __main__.py  dataset.py  metrics.py  report.py  runner.py  types.py  vertex_client.py
advocate/eval/data/: draft_eval_set.jsonl
advocate/services/: calendar_port.py  scheduler.py
advocate/ui/: __init__.py  __main__.py  app.py  command.py  pipeline.py  steps.py  theme.py
agent_apps/advocate/: agent.py
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DECISIONS.md  DEMO_SCRIPT.md  SUBMISSION.md  eval-report.md  issues-advocate.md  plan-advocate.md  prd-advocate.md
tasks/: STATUS.md  lessons.md  plan.md  todo.md
tests/: test_active_five.py  test_agent_discovery.py  test_business_days.py  test_cadence.py  test_citations.py  test_classification.py  test_command.py  test_companies_with_contacts.py  test_drafting.py  test_email_eval.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_report.py  test_eval_runner.py  test_firestore_integration.py  test_followups.py  test_gate.py  test_guardrails.py  test_loaders.py  test_pipeline.py  test_pipeline_promotion.py  test_prep_tools.py  test_ranker.py  test_ranking_spec.py  test_repository.py  test_repository_factory.py  test_research.py  test_scheduler.py  test_serialization.py  test_sourcing.py  test_tiara.py  test_tool_error_handling.py  test_tool_safe.py  test_ui_handlers.py  test_ui_pipeline.py  test_ui_steps.py
tests/e2e/: README.md  adk_client.py  budget.py  conftest.py  llm_judge.py  proofs.py  run.sh  test_agent_contracts.py  test_email_quality.py  test_golden_path.py
