[project]
name = "advocate"
version = "0.1.0"
description = "Advocate — agentic 2-Hour Job Search (LAMP -> 3B7 -> TIARA) on Google's Gemini Enterprise Agent Platform (ADK + Gemini on Vertex AI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core, framework-agnostic deps shared by BOTH services (ADK agent + Gradio UI).
    # google-genai drives the grounded Gemini calls in-process (sourcing/draft/prep);
    # firestore backs per-user state.
    "google-cloud-firestore>=2.16.0",
    "google-genai>=0.3.0",
]

[project.optional-dependencies]
# The ADK agent runtime (the Cloud Run ADK service). Split OUT of core deps because
# google-adk's transitive pins (pydantic>=2.12, starlette>=1.0.1, websockets>=15) are
# INCOMPATIBLE with gradio's (pydantic<2.12, starlette<1.0) — so the two services must
# install disjoint extras. The ADK image builds with `.[agent]`; the UI with `.[ui]`.
agent = [
    # Pinned to the validated ADK 2.x line; 2.0 introduced breaking changes and
    # requires Python >=3.11. Cap below 3.0 so the next major can't silently break us.
    "google-adk>=2.2.0,<3.0.0",
    # Cloud Trace export for ADK's trace_to_cloud observability.
    "opentelemetry-exporter-gcp-trace>=1.6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Offline (dev-time) quality-evaluation harness — Vertex AI Gen AI evaluation
# (LLM-as-judge). NOT installed in the Cloud Run image (the Dockerfile runs a bare
# `pip install .`), so it never bloats the runtime or the request path. Run on demand:
#   pip install ".[eval]" && python -m advocate.eval
eval = [
    "google-cloud-aiplatform[evaluation]>=1.71.0",
    "pandas>=2.0",
]
# Gradio "Guided Sprint" end-user UI — a SEPARATE Cloud Run service that imports
# advocate.* in-process (no /run_sse hop). NOT installed in the lean ADK service image;
# the UI service builds with `pip install ".[ui]"`. Same isolation rationale as eval.
ui = [
    "gradio>=5.0,<6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["advocate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["advocate"]
omit = [
    "advocate/app.py",
    "advocate/agents/*",
    # Live adapter: verified by the opt-in Firestore integration test, not unit coverage.
    "advocate/data/firestore_repo.py",
    # Live Vertex Gen AI evaluation adapter + on-demand CLI: verified by the live eval
    # run, not unit coverage (same rationale as firestore_repo). The pure orchestration
    # in advocate/eval/runner.py IS unit-tested with an injected fake judge.
    "advocate/eval/vertex_client.py",
    "advocate/eval/__main__.py",
]
